[package]
name = "advent_of_code"
version = "0.9.3"
authors = ["Felix Spöttel <1682504+fspoettel@users.noreply.github.com>"]
edition = "2021"
default-run = "advent_of_code"
publish = false
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
doctest = false

[features]
test_lib = []

[dependencies]
aho-corasick = "1.1.2"
colored = "2.1.0"
itertools = "0.12.0"
num-traits = "0.2.14"
pico-args = "0.5.0"
rstest = "0.18.2"
